# histpresent

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/fitcal/: CMakeLists.txt  FhMarker.cxx  FhPeak.cxx
src/gredit/: CMakeLists.txt  ChangeTextDialog.cxx  CreateCDlabel.cxx  CurlyLineWithArrowDialog.cxx  EditMarker.cxx  FeynmanDiagramDialog.cxx  GEdit.cxx  GrCanvas.cxx  GroupOfGObjects.cxx  HTPad.cxx  HprEditCommands.cxx  HprElement.cxx  HprElementEditor.cxx  HprImage.cxx  HprRaRegion.cxx  HprText.cxx  InsertArcDialog.cxx  InsertAxisDialog.cxx  InsertFunctionDialog.cxx  InsertHistGraphDialog.cxx  InsertImageDialog.cxx  InsertPadDialog.cxx  InsertTextBoxDialog.cxx  InsertTextDialog.cxx  MarkerLineDialog.cxx  TArcEditor.cxx  TCurlyLineWithArrow.cxx  THprArc.cxx  THprArrow.cxx  THprCurlyArc.cxx  THprCurlyLine.cxx  THprCurlyLineWithArrow.cxx  THprEllipse.cxx  THprGaxis.cxx  THprGraph.cxx  THprLatex.cxx  THprLine.cxx  THprMarker.cxx  THprPolyLine.cxx  THprSplineX.cxx  (+8 more)
src/gutils/: CMakeLists.txt  Save2FileDialog.cxx  TGMrbButtonFrame.cxx  TGMrbCheckButton.cxx  TGMrbFileEntry.cxx  TGMrbFileObject.cxx  TGMrbFocusList.cxx  TGMrbGeometry.cxx  TGMrbGetTextAlignment.cxx  TGMrbHelpWindow.cxx  TGMrbInputDialog.cxx  TGMrbLabelCombo.cxx  TGMrbLabelEntry.cxx  TGMrbLayout.cxx  TGMrbLofKeyBindings.cxx  TGMrbMacroBrowser.cxx  TGMrbMessageViewer.cxx  TGMrbObject.cxx  TGMrbPictureButton.cxx  TGMrbProfile.cxx  TGMrbProgressBar.cxx  TGMrbRadioButton.cxx  TGMrbSliders.cxx  TGMrbTableFrame.cxx  TGMrbTextButton.cxx  TGMrbValuesAndText.cxx  TableOfLabels.cxx
src/helpbrowser/: CMakeLists.txt  TMrbHelpBrowser.cxx  TNamedBytes.cxx  TNamedString.cxx
src/hpr/: AddFitMenus.cxx  Ascii2GraphDialog.cxx  Ascii2HistDialog.cxx  Ascii2NtupleDialog.cxx  CMakeLists.txt  EmptyHistDialog.cxx  FhContour.cxx  FillFormDialog.cxx  FitHist.cxx  Fitting.cxx  GroupOfHists.cxx  HTCanvas.cxx  HandleMenus.cxx  HistPresent.cxx  HistPresent.h  HprFunc2.cxx  HprGaxis.cxx  HprLegend.cxx  HprStack.cxx  HprTh3Dialog.cxx  Rebin2DimDialog.cxx  SetColorModeDialog.cxx  SetHistOptDialog.cxx  ShiftScale.cxx  TMrbArray.cxx  TText3D.cxx  hprbase.cxx
src/polar/: CMakeLists.txt  TPolControl.cxx
src/utils/: CMakeLists.txt  LinkDef.h  TMrbEnv.cxx  TMrbHistory.cxx  TMrbLofData.cxx  TMrbLofMacros.cxx  TMrbLofNamedX.cxx  TMrbLofUserVars.cxx  TMrbLogger.cxx  TMrbNamedArray.cxx  TMrbNamedDouble.cxx  TMrbNamedX.cxx  TMrbResource.cxx  TMrbSerialComm.cxx  TMrbStatistics.cxx  TMrbStatistics.h  TMrbString.cxx  TMrbSystem.cxx  TMrbTail.cxx  TMrbTemplate.cxx  TMrbVariables.cxx  TMrbWindows.cxx
