add_library(gredit SHARED
    ChangeTextDialog.cxx
    CreateCDlabel.cxx
    CurlyLineWithArrowDialog.cxx
    EditMarker.cxx
    FeynmanDiagramDialog.cxx
    GEdit.cxx
    GEditToolBar.cxx
    GrCanvas.cxx
    GroupOfGObjects.cxx
    HprEditCommands.cxx
    HprElement.cxx
    HprElementEditor.cxx
    HprImage.cxx
    HprPlaneManager.cxx
    HprRaRegion.cxx
    HprText.cxx
    HTPad.cxx
    InsertArcDialog.cxx
    InsertAxisDialog.cxx
    InsertFunctionDialog.cxx
    InsertHistGraphDialog.cxx
    InsertImageDialog.cxx
    InsertPadDialog.cxx
    InsertTextBoxDialog.cxx
    InsertTextDialog.cxx
    main.cxx
    MarkerLineDialog.cxx
    TArcEditor.cxx
    TCurlyLineWithArrow.cxx
    TextBox.cxx
    TextBoxEditor.cxx
    TextOnArc.cxx
    THprArc.cxx
    THprArrow.cxx
    THprCurlyArc.cxx
    THprCurlyLine.cxx
    THprCurlyLineWithArrow.cxx
    THprEllipse.cxx
    THprGaxis.cxx
    THprGraph.cxx
    THprLatex.cxx
    THprLine.cxx
    THprMarker.cxx
    THprPolyLine.cxx
    THprSplineX.cxx
    THprTextBox.cxx
    TSplineX.cxx
    TSplineXDialog.cxx
    TSplineXEditor.cxx
    XGrabDialog.cxx
)

target_link_libraries(gredit PUBLIC ROOT::RIO)
