add_library(gredit SHARED
    ChangeTextDialog.cxx
    CreateCDlabel.cxx
    CurlyLineWithArrowDialog.cxx
    EditMarker.cxx
    FeynmanDiagramDialog.cxx
    GEdit.cxx
    GEditToolBar.cxx
    GrCanvas.cxx
    GroupOfGObjects.cxx
    HprEditCommands.cxx
    HprElement.cxx
    HprElementEditor.cxx
    HprImage.cxx
    HprPlaneManager.cxx
    HprRaRegion.cxx
    HprText.cxx
    HTPad.cxx
    InsertArcDialog.cxx
    InsertAxisDialog.cxx
    InsertFunctionDialog.cxx
    InsertHistGraphDialog.cxx
    InsertImageDialog.cxx
    InsertPadDialog.cxx
    InsertTextBoxDialog.cxx
    InsertTextDialog.cxx
    main.cxx
    MarkerLineDialog.cxx
    TArcEditor.cxx
    TCurlyLineWithArrow.cxx
    TextBox.cxx
    TextBoxEditor.cxx
    TextOnArc.cxx
    THprArc.cxx
    THprArrow.cxx
    THprCurlyArc.cxx
    THprCurlyLine.cxx
    THprCurlyLineWithArrow.cxx
    THprEllipse.cxx
    THprGaxis.cxx
    THprGraph.cxx
    THprLatex.cxx
    THprLine.cxx
    THprMarker.cxx
    THprPolyLine.cxx
    THprSplineX.cxx
    THprTextBox.cxx
    TSplineX.cxx
    TSplineXDialog.cxx
    TSplineXEditor.cxx
    XGrabDialog.cxx
)

ROOT_GENERATE_DICTIONARY(gredit_dict MODULE gredit LINKDEF LinkDef.h
    ChangeTextDialog.h
    CreateCDlabel.h
    CurlyLineWithArrowDialog.h
    EditMarker.h
    FeynmanDiagramDialog.h
    GEdit.h
    GrCanvas.h
    GroupOfGObjects.h
    HprEditBits.h
    HprEditCommands.h
    HprElementEditor.h
    HprElement.h
    HprImage.h
    HprPlaneManager.h
    HprRaRegion.h
    HprText.h
    HTPad.h
    InsertArcDialog.h
    InsertAxisDialog.h
    InsertFunctionDialog.h
    InsertHistGraphDialog.h
    InsertImageDialog.h
    InsertPadDialog.h
    InsertTextBoxDialog.h
    InsertTextDialog.h
    MarkerLineDialog.h
    TArcEditor.h
    TCurlyLineWithArrow.h
    TextBoxEditor.h
    TextBox.h
    TextOnArc.h
    THprArc.h
    THprArrow.h
    THprCurlyArc.h
    THprCurlyLine.h
    THprCurlyLineWithArrow.h
    THprEllipse.h
    THprGaxis.h
    THprGraph.h
    THprLatex.h
    THprLine.h
    THprMarker.h
    THprPolyLine.h
    THprSplineX.h
    THprTextBox.h
    TSplineXDialog.h
    TSplineXEditor.h
    TSplineX.h
    XGrabDialog.h
)

target_link_libraries(gredit PUBLIC ${HISTPRESENT_ROOT_COMPONENTS})
